--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.2",
     "dompurify": "^2.3.10",
     "marked": "^4.0.18",
     "react": "^18.1.0",
